# pydantic_cant_use_config

./: LICENSE  README.md  main.py  pyproject.toml  traceback_poetry_2.7.0.txt
