[tool.poetry]
name = "pydantic-cant-use-config"
version = "0.1.0"
description = ""
authors = ["Jostein Leira <9363084+josteinl@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.7.0"
#pydantic = "2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
